adds images to stats page

--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -519,16 +519,25 @@
 \begin{frame}
 	\frametitle{Statistics}
 
-	\begin{itemize}
-		\item Duration: 16 weeks
-		\item Pull requests: 143
-		\item LOC: 15'093
-		\begin{itemize}
-			\item Frontend: 3'812
-			\item Middle-End: 5'380
-			\item Backend: 5'039
-		\end{itemize}
-	\end{itemize}
+	\begin{columns}
+		\begin{column}{0.3\textwidth}
+			\begin{itemize}
+				\item Duration: 16 weeks
+				\item Pull requests: 143
+				\item LOC: 15'093
+				      \begin{itemize}
+					      \item Frontend: 3'812
+					      \item Middle-End: 5'380
+					      \item Backend: 5'039
+				      \end{itemize}
+			\end{itemize}
+		\end{column}
+
+		\begin{column}{0.7\textwidth}
+			\centering \includegraphics[scale=0.43]{images/stats.pdf}
+		\end{column}
+
+	\end{columns}
 
 	% graph w/ commits over time
 
