Remove call graph slide for time reasons

--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -157,7 +157,7 @@
 
 
 \begin{frame}
-	\frametitle{Optimizations -- Overview}
+	\frametitle{Optimizations}
 
 	\begin{columns}
 		\begin{column}{0.48\textwidth}
@@ -196,6 +196,7 @@
 \end{frame}
 
 
+\begin{comment}
 \begin{frame}
 	\frametitle{Optimizations -- Fixed Point Iteration}
 
@@ -230,6 +231,7 @@
 	\end{columns}
 
 \end{frame}
+\end{comment}
 
 \begin{comment}
 \begin{frame}
