Fix semantic slide

--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -87,37 +87,37 @@
 	\begin{columns}
 		\begin{column}{0.52\textwidth}
 
-	\begin{contentblock}{Namespace Gathering}
-		\begin{itemize}
-			\item Collect class, field, and method declarations
-			\item Ensure existence of unique \texttt{main}-method
-		\end{itemize}
-	\end{contentblock}
+			\begin{contentblock}{Namespace Gathering}
+				\begin{itemize}
+					\item Collect class, field, and method declarations
+					\item Ensure existence of unique \texttt{main}-method
+				\end{itemize}
+			\end{contentblock}
 
 
-	\begin{contentblock}{Name and Type Analysis}
-		\begin{itemize}
-			\item Find and link variable declarations
-			\item Compute and check expression types
-			\item Resolve function call references
-		\end{itemize}
-	\end{contentblock}
+			\begin{contentblock}{Name and Type Analysis}
+				\begin{itemize}
+					\item Find and link variable declarations
+					\item Compute and check expression types
+					\item Resolve function call references
+				\end{itemize}
+			\end{contentblock}
 
 
-	\begin{contentblock}{Semantic Checks}
-		\begin{itemize}
-			\item Ensure existence of \texttt{return} statement on every path
-			\item Ensure \texttt{\textbf{args}} and \texttt{\textbf{String}} are never used
-			\item \dots and other miscellaneous checks
-		\end{itemize}
-	\end{contentblock}
+			\begin{contentblock}{Semantic Checks}
+				\begin{itemize}
+					\item Ensure existence of \texttt{return} statement on every path
+					\item Ensure \texttt{\textbf{args}} and \texttt{\textbf{String}} are never used
+					% \item \dots and other miscellaneous checks
+				\end{itemize}
+			\end{contentblock}
 
-\end{column}
+		\end{column}
 
-\begin{column}{0.47\textwidth}
-		\centering \includegraphics[scale=0.24]{images/semantic_tests.pdf}
-\end{column}
-\end{columns}
+		\begin{column}{0.47\textwidth}
+				\centering \includegraphics[scale=0.24]{images/semantic_tests.pdf}
+		\end{column}
+	\end{columns}
 
 \end{frame}
 
